# logilink

./: .coverage  pyproject.toml
src/logilink/: algorithm.py  value.py  value_store.py
tests/: test_algorithm.py  test_value.py  test_value_store.py
